syntax = "proto3";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Products";

package grpc_server.api.protos.messages.products;

message DeleteProductCommand {
    string id = 1;
}
